--- a/_includes/cart.html
+++ b/_includes/cart.html
@@ -7,43 +7,51 @@
 	<sup>(<span class="total-count"></span>)</sup>
 </a>
 <aside id="cart">
-	<a href="#" class="close">
+    
+    <a href="#" class="close">
         <svg height="1.5em" viewBox="0 0 48 48" class="icon" xmlns="http://www.w3.org/2000/svg">
-            <!-- <path fill="none" d="M0 0h24v24H0V0z"/><path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/> -->
             <path d="M28.228,23.986L47.092,5.122c1.172-1.171,1.172-3.071,0-4.242c-1.172-1.172-3.07-1.172-4.242,0L23.986,19.744L5.121,0.88
-		c-1.172-1.172-3.07-1.172-4.242,0c-1.172,1.171-1.172,3.071,0,4.242l18.865,18.864L0.879,42.85c-1.172,1.171-1.172,3.071,0,4.242
-		C1.465,47.677,2.233,47.97,3,47.97s1.535-0.293,2.121-0.879l18.865-18.864L42.85,47.091c0.586,0.586,1.354,0.879,2.121,0.879
-		s1.535-0.293,2.121-0.879c1.172-1.171,1.172-3.071,0-4.242L28.228,23.986z"/>
+        c-1.172-1.172-3.07-1.172-4.242,0c-1.172,1.171-1.172,3.071,0,4.242l18.865,18.864L0.879,42.85c-1.172,1.171-1.172,3.071,0,4.242
+        C1.465,47.677,2.233,47.97,3,47.97s1.535-0.293,2.121-0.879l18.865-18.864L42.85,47.091c0.586,0.586,1.354,0.879,2.121,0.879
+        s1.535-0.293,2.121-0.879c1.172-1.171,1.172-3.071,0-4.242L28.228,23.986z"/>
         </svg>
-	</a>
-    <h2>Корзина</h2>
-    <div class="cart-inner show-cart">
-        <div class="cart-item">
-            <a href="#">
-                <img class="image" src="/images/catalog/keramika/vase-a-01.jpg">
-            </a>
-            <div class="align-left">
-                <a href="#">Product name long very such name</a>
-                <p>54 650 &#8381;</p>
-                <span>- 1 +</span>
-            </div>
+    </a>
+    <div class="cart-cart">
+        <h2>Корзина</h2>
+        <div class="cart-inner show-cart">
         </div>
-        <div class="cart-item">
-            <a href="#">
-                <img class="image" src="/images/catalog/keramika/vase-a-01.jpg">
-            </a>
-            <div class="align-left"> 
-                <a href="#">Product name long very such name</a>
-                <p>54 650 &#8381;</p>
-                <span>- 1 +</span>
-            </div>
+        
+        <footer>
+            <hr class="alt" />
+            <h3>Итого: <span class="total-cart"></span> &#8381;</h3>
+            <ul class="actions">
+                <li><a href="#" class="button special big order">Оформить заказ</a></li>
+            </ul>
+        </footer>
+    </div>
+    <div class="form-wrapper" style="display:none;">
+        <form action="#" class="ajax-form">
+            <input type="text" class="name" name="name" placeholder="Ваше имя*" required>
+            <input type="tel" class="phone" name="phone" placeholder="Номер телефона*" required>
+            <input type="email" class="email" name="email" placeholder="E-mail*" required>
+            <textarea rows="4" name="message" class="message" placeholder="Комментарий"></textarea>
+            <input style="display:none" type="email" name="mail_to" value="info@veshi.shop">
+            <input style="display:none" class="cart-string" type="text" name="cartString" value="">
+            <ul class="actions">
+                <li><input type="submit" class="button special big" value="Отправить"></li>
+            </ul>
+        </form>
+        <div class="form-loading align-center" style="display:none;">
+            <h3>Отправка..</h3>
+            <p>Очень стараемся побыстрее отправить ваш заказ.</p>
+        </div>
+        <div class="form-succes align-center" style="display:none;">
+            <h3>Спасибо!</h3>
+            <p>Мы свяжемся с вами в самое ближайшее время!</p>
+        </div>
+        <div class="form-error align-center" style="display:none;">
+            <h3>Ой!</h3>
+            <p>Что-то пошло не так. Попробуйте отправить заказ чуть позже или просто позвоните нам.</p>
         </div>
     </div>
-    <footer>
-        <hr class="alt" />
-        <h3>Итого: <span class="total-cart">126 500</span> &#8381;</h3>
-        <ul class="actions">
-            <li><a href="#" class="button special big">Оформить заказ</a></li>
-        </ul>
-    </footer>
 </aside>
