--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,10 +258,6 @@
 
 /* Form */
 
-	form {
-		margin: 0 0 2em 0;
-	}
-
 	label {
 		display: block;
 		font-size: 0.9em;
@@ -280,7 +276,7 @@
 		-ms-appearance: none;
 		appearance: none;
 		background: rgba(144, 144, 144, 0.025);
-		border-radius: 0;
+		border-radius: 5px;
 		border: none;
 		border: solid 1px rgba(144, 144, 144, 0.25);
 		color: inherit;
@@ -349,6 +345,7 @@
 	input[type="tel"],
 	select {
 		height: 2.75em;
+		margin-bottom: 2em;
 	}
 
 	textarea {
@@ -816,6 +813,8 @@
 		letter-spacing: 0.05em;
 		font-weight: 400;
 		border-radius: 5px;
+		outline: none;
+		border-style: none;
 	}
 
 		input[type="submit"]:hover,
@@ -1392,11 +1391,33 @@
 
 }
 
+.form-wrapper {
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    max-width: 30em;
+    width: 80%;
+}
+
+	.form-wrapper ul, .form-wrapper ul li {
+		margin-bottom: 0;
+	}
+
+.cart-cart {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
 #cart {
 	transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s, -webkit-transform 0.5s ease;
 	box-shadow: none;
 	height: 100%;
-	min-width: 50%;
+	width: 30%;
 	max-width: 90%;
 	overflow-y: hidden;
 	position: fixed;
@@ -1443,10 +1464,23 @@
 		margin-bottom: 1rem;
 	}
 
+	@media screen and (max-width: 1680px) {
+		
+		#cart {
+			width: 50%;
+		}
+	}
+
+	@media screen and (max-width: 980px) {
+		
+		#cart {
+			width: 75%;
+		}
+	}
+
 	@media screen and (max-width: 480px) {
 
 		#cart {
-			/* padding-top: 3em; */
 			width: 85%;
 		}
 
@@ -1863,4 +1897,8 @@
 		animation: overlay-show 1.25s ease-in forwards !important;
 		opacity: 1;
 		z-index: 1000000;
+	}
+
+	.hide {
+		display: none;
 	}
